--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ nav {
    }
 
 .menu li:hover {
-    background-color: #011c5a;
+    background-color: #414e6db0;
     border-radius: 5px;
     transition: 0.3s ease;
    }
@@ -78,10 +78,9 @@ nav {
         right: 0;
         height: 80vh;
         top: 10vh;
-        background-color: #00091edc;
+        background-color: #00113adc;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
         width: 70vw;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
@@ -89,6 +88,7 @@ nav {
 
     .menu li {
         opacity: 0;
+        margin-top: 25px;
     }
 
     .burger {
@@ -129,7 +129,7 @@ nav {
 
 
 footer {
-    background-color: #333;
+    background-color: rgb(10, 10, 10);
     overflow: hidden;
     text-align: center;
     padding: 10px;
