changed background colour

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -27,7 +27,8 @@
 }
 
 #our-team {
-    background-color: #EFEFFF;
+    /* background-color: #EFEFFF; */
+    background-color: #00091E;
     padding: 5vh 5vw;
 }
 
