--- a/css/prizes.css
+++ b/css/prizes.css
@@ -3,7 +3,8 @@
 #prizes{
     /* width: 900px; */
     /* margin: 5% auto; */
-    background-color: #EFEFFF;
+    /* background-color: #EFEFFF; */
+    background-color: #00091E;
     /* height: 550px; */
     padding-bottom: 50px;
 }
